[gd_scene load_steps=3 format=3 uid="uid://cvlh1p6du166e"]

[ext_resource type="Script" path="res://scripts/dialog_entry_node.gd" id="1_rnsr5"]
[ext_resource type="Texture2D" uid="uid://c870nwd34op8i" path="res://textures/entry.svg" id="2_w13vc"]

[node name="DialogEntryNode" type="GraphNode"]
offset_right = 340.0
offset_bottom = 95.0
title = "Dialog Entry"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0, 1, 0.4, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_rnsr5")
node_icon = ExtResource("2_w13vc")

[node name="NameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Write the dialog entry name here..."

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="focus_exited" from="NameEdit" to="." method="_on_name_edit_focus_exited"]
